[gd_scene load_steps=15 format=2]

[ext_resource path="res://Shaders/PixelOutline.shader" type="Shader" id=1]
[ext_resource path="res://Scenes/Interactables/Craftables/Forge.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Interactables/Craftables/MiningRig.tscn" type="PackedScene" id=6]
[ext_resource path="res://TileSets/CaveTileset.tres" type="TileSet" id=7]
[ext_resource path="res://Scripts/Worlds/Cave/Cave.gd" type="Script" id=8]
[ext_resource path="res://Sprites/UI/Other/TileSelector.png" type="Texture" id=9]
[ext_resource path="res://Scenes/Interactables/CraftingTable.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Interactables/Shop.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Interactables/BlackMarket.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/Objects/Rock.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/Objects/Ladder.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scenes/Interactables/Chest.tscn" type="PackedScene" id=15]
[ext_resource path="res://Scenes/KinematicBodies/Player.tscn" type="PackedScene" id=16]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 1 )
shader_param/Enabled = true
shader_param/width = 1.0
shader_param/outline_color = Color( 0.941176, 0.941176, 0.941176, 0 )
shader_param/pixel_size = 1
shader_param/alphaThreshold = 0.5

[node name="Cave" type="Node2D"]
script = ExtResource( 8 )

[node name="Floor" type="TileMap" parent="."]
tile_set = ExtResource( 7 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -196612, 0, 0, -196611, 0, 1, -196610, 0, 0, -196609, 0, 1, -262144, 0, 0, -262143, 0, 1, -262142, 0, 0, -262141, 0, 1, -262140, 0, 0, -262139, 0, 1, -262138, 0, 0, -262137, 0, 1, -262136, 0, 0, -262135, 0, 1, -262134, 0, 0, -262133, 0, 1, -262132, 0, 0, -262131, 0, 1, -262130, 0, 0, -262129, 0, 1, -262128, 0, 0, -262127, 0, 1, -262126, 0, 0, -262125, 0, 1, -262124, 0, 0, -262123, 0, 1, -262122, 0, 0, -262121, 0, 1, -131076, 0, 65536, -131075, 0, 65537, -131074, 0, 65536, -131073, 0, 65537, -196608, 0, 65536, -196607, 0, 65537, -196606, 0, 65536, -196605, 0, 65537, -196604, 0, 65536, -196603, 0, 65537, -196602, 0, 65536, -196601, 0, 65537, -196600, 0, 65536, -196599, 0, 65537, -196598, 0, 65536, -196597, 0, 65537, -196596, 0, 65536, -196595, 0, 65537, -196594, 0, 65536, -196593, 0, 65537, -196592, 0, 65536, -196591, 0, 65537, -196590, 0, 65536, -196589, 0, 65537, -196588, 0, 65536, -196587, 0, 65537, -196586, 0, 65536, -196585, 0, 65537, -65540, 0, 0, -65539, 0, 1, -65538, 0, 0, -65537, 0, 1, -131072, 0, 0, -131071, 0, 1, -131070, 0, 0, -131069, 0, 1, -131068, 0, 0, -131067, 0, 1, -131066, 0, 0, -131065, 0, 1, -131064, 0, 0, -131063, 0, 1, -131062, 0, 0, -131061, 0, 1, -131060, 0, 0, -131059, 0, 1, -131058, 0, 0, -131057, 0, 1, -131056, 0, 0, -131055, 0, 1, -131054, 0, 0, -131053, 0, 1, -131052, 0, 0, -131051, 0, 1, -131050, 0, 0, -131049, 0, 1, -4, 0, 65536, -3, 0, 65537, -2, 0, 65536, -1, 0, 65537, -65536, 0, 65536, -65535, 0, 65537, -65534, 0, 65536, -65533, 0, 65537, -65532, 0, 65536, -65531, 0, 65537, -65530, 0, 65536, -65529, 0, 65537, -65528, 0, 65536, -65527, 0, 65537, -65526, 0, 65536, -65525, 0, 65537, -65524, 0, 65536, -65523, 0, 65537, -65522, 0, 65536, -65521, 0, 65537, -65520, 0, 65536, -65519, 0, 65537, -65518, 0, 65536, -65517, 0, 65537, -65516, 0, 65536, -65515, 0, 65537, -65514, 0, 65536, -65513, 0, 65537, 65532, 0, 0, 65533, 0, 1, 65534, 0, 0, 65535, 0, 1, 0, 0, 0, 1, 0, 1, 2, 0, 0, 3, 0, 1, 4, 0, 0, 5, 0, 1, 6, 0, 0, 7, 0, 1, 8, 0, 0, 9, 0, 1, 10, 0, 0, 11, 0, 1, 12, 0, 0, 13, 0, 1, 14, 0, 0, 15, 0, 1, 16, 0, 0, 17, 0, 1, 18, 0, 0, 19, 0, 1, 20, 0, 0, 21, 0, 1, 22, 0, 0, 23, 0, 1, 131068, 0, 65536, 131069, 0, 65537, 131070, 0, 65536, 131071, 0, 65537, 65536, 0, 65536, 65537, 0, 65537, 65538, 0, 65536, 65539, 0, 65537, 65540, 0, 65536, 65541, 0, 65537, 65542, 0, 65536, 65543, 0, 65537, 65544, 0, 65536, 65545, 0, 65537, 65546, 0, 65536, 65547, 0, 65537, 65548, 0, 65536, 65549, 0, 65537, 65550, 0, 65536, 65551, 0, 65537, 65552, 0, 65536, 65553, 0, 65537, 65554, 0, 65536, 65555, 0, 65537, 65556, 0, 65536, 65557, 0, 65537, 65558, 0, 65536, 65559, 0, 65537, 196604, 0, 0, 196605, 0, 1, 196606, 0, 0, 196607, 0, 1, 131072, 0, 0, 131073, 0, 1, 131074, 0, 0, 131075, 0, 1, 131076, 0, 0, 131077, 0, 1, 131078, 0, 0, 131079, 0, 1, 131080, 0, 0, 131081, 0, 1, 131082, 0, 0, 131083, 0, 1, 131084, 0, 0, 131085, 0, 1, 131086, 0, 0, 131087, 0, 1, 131088, 0, 0, 131089, 0, 1, 131090, 0, 0, 131091, 0, 1, 131092, 0, 0, 131093, 0, 1, 131094, 0, 0, 131095, 0, 1, 262140, 0, 65536, 262141, 0, 65537, 262142, 0, 65536, 262143, 0, 65537, 196608, 0, 65536, 196609, 0, 65537, 196610, 0, 65536, 196611, 0, 65537, 196612, 0, 65536, 196613, 0, 65537, 196614, 0, 65536, 196615, 0, 65537, 196616, 0, 65536, 196617, 0, 65537, 196618, 0, 65536, 196619, 0, 65537, 196620, 0, 65536, 196621, 0, 65537, 196622, 0, 65536, 196623, 0, 65537, 196624, 0, 65536, 196625, 0, 65537, 196626, 0, 65536, 196627, 0, 65537, 196628, 0, 65536, 196629, 0, 65537, 196630, 0, 65536, 196631, 0, 65537, 327676, 0, 0, 327677, 0, 1, 327678, 0, 0, 327679, 0, 1, 262144, 0, 0, 262145, 0, 1, 262146, 0, 0, 262147, 0, 1, 262148, 0, 0, 262149, 0, 1, 262150, 0, 0, 262151, 0, 1, 262152, 0, 0, 262153, 0, 1, 262154, 0, 0, 262155, 0, 1, 262156, 0, 0, 262157, 0, 1, 262158, 0, 0, 262159, 0, 1, 262160, 0, 0, 262161, 0, 1, 262162, 0, 0, 262163, 0, 1, 262164, 0, 0, 262165, 0, 1, 262166, 0, 0, 262167, 0, 1, 393212, 0, 65536, 393213, 0, 65537, 393214, 0, 65536, 393215, 0, 65537, 327680, 0, 65536, 327681, 0, 65537, 327682, 0, 65536, 327683, 0, 65537, 327684, 0, 65536, 327685, 0, 65537, 327686, 0, 65536, 327687, 0, 65537, 327688, 0, 65536, 327689, 0, 65537, 327690, 0, 65536, 327691, 0, 65537, 327692, 0, 65536, 327693, 0, 65537, 327694, 0, 65536, 327695, 0, 65537, 327696, 0, 65536, 327697, 0, 65537, 327698, 0, 65536, 327699, 0, 65537, 327700, 0, 65536, 327701, 0, 65537, 327702, 0, 65536, 327703, 0, 65537, 458748, 0, 0, 458749, 0, 1, 458750, 0, 0, 458751, 0, 1, 393216, 0, 0, 393217, 0, 1, 393218, 0, 0, 393219, 0, 1, 393220, 0, 0, 393221, 0, 1, 393222, 0, 0, 393223, 0, 1, 393224, 0, 0, 393225, 0, 1, 393226, 0, 0, 393227, 0, 1, 393228, 0, 0, 393229, 0, 1, 393230, 0, 0, 393231, 0, 1, 393232, 0, 0, 393233, 0, 1, 393234, 0, 0, 393235, 0, 1, 393236, 0, 0, 393237, 0, 1, 393238, 0, 0, 393239, 0, 1, 524284, 0, 65536, 524285, 0, 65537, 524286, 0, 65536, 524287, 0, 65537, 458752, 0, 65536, 458753, 0, 65537, 458754, 0, 65536, 458755, 0, 65537, 458756, 0, 65536, 458757, 0, 65537, 458758, 0, 65536, 458759, 0, 65537, 458760, 0, 65536, 458761, 0, 65537, 458762, 0, 65536, 458763, 0, 65537, 458764, 0, 65536, 458765, 0, 65537, 458766, 0, 65536, 458767, 0, 65537, 458768, 0, 65536, 458769, 0, 65537, 458770, 0, 65536, 458771, 0, 65537, 458772, 0, 65536, 458773, 0, 65537, 458774, 0, 65536, 458775, 0, 65537, 589820, 0, 0, 589821, 0, 1, 589822, 0, 0, 589823, 0, 1, 524288, 0, 0, 524289, 0, 1, 524290, 0, 0, 524291, 0, 1, 524292, 0, 0, 524293, 0, 1, 524294, 0, 0, 524295, 0, 1, 524296, 0, 0, 524297, 0, 1, 524298, 0, 0, 524299, 0, 1, 524300, 0, 0, 524301, 0, 1, 524302, 0, 0, 524303, 0, 1, 524304, 0, 0, 524305, 0, 1, 524306, 0, 0, 524307, 0, 1, 524308, 0, 0, 524309, 0, 1, 524310, 0, 0, 524311, 0, 1, 655356, 0, 65536, 655357, 0, 65537, 655358, 0, 65536, 655359, 0, 65537, 589824, 0, 65536, 589825, 0, 65537, 589826, 0, 65536, 589827, 0, 65537, 589828, 0, 65536, 589829, 0, 65537, 589830, 0, 65536, 589831, 0, 65537, 589832, 0, 65536, 589833, 0, 65537, 589834, 0, 65536, 589835, 0, 65537, 589836, 0, 65536, 589837, 0, 65537, 589838, 0, 65536, 589839, 0, 65537, 589840, 0, 65536, 589841, 0, 65537, 589842, 0, 65536, 589843, 0, 65537, 589844, 0, 65536, 589845, 0, 65537, 589846, 0, 65536, 589847, 0, 65537, 720892, 0, 0, 720893, 0, 1, 720894, 0, 0, 720895, 0, 1, 655360, 0, 0, 655361, 0, 1, 655362, 0, 0, 655363, 0, 1, 655364, 0, 0, 655365, 0, 1, 655366, 0, 0, 655367, 0, 1, 655368, 0, 0, 655369, 0, 1, 655370, 0, 0, 655371, 0, 1, 655372, 0, 0, 655373, 0, 1, 655374, 0, 0, 655375, 0, 1, 655376, 0, 0, 655377, 0, 1, 655378, 0, 0, 655379, 0, 1, 655380, 0, 0, 655381, 0, 1, 655382, 0, 0, 655383, 0, 1, 786428, 0, 65536, 786429, 0, 65537, 786430, 0, 65536, 786431, 0, 65537, 720896, 0, 65536, 720897, 0, 65537, 720898, 0, 65536, 720899, 0, 65537, 720900, 0, 65536, 720901, 0, 65537, 720902, 0, 65536, 720903, 0, 65537, 720904, 0, 65536, 720905, 0, 65537, 720906, 0, 65536, 720907, 0, 65537, 720908, 0, 65536, 720909, 0, 65537, 720910, 0, 65536, 720911, 0, 65537, 720912, 0, 65536, 720913, 0, 65537, 720914, 0, 65536, 720915, 0, 65537, 720916, 0, 65536, 720917, 0, 65537, 720918, 0, 65536, 720919, 0, 65537, 851964, 0, 0, 851965, 0, 1, 851966, 0, 0, 851967, 0, 1, 786432, 0, 0, 786433, 0, 1, 786434, 0, 0, 786435, 0, 1, 786436, 0, 0, 786437, 0, 1, 786438, 0, 0, 786439, 0, 1, 786440, 0, 0, 786441, 0, 1, 786442, 0, 0, 786443, 0, 1, 786444, 0, 0, 786445, 0, 1, 786446, 0, 0, 786447, 0, 1, 786448, 0, 0, 786449, 0, 1, 786450, 0, 0, 786451, 0, 1, 786452, 0, 0, 786453, 0, 1, 786454, 0, 0, 786455, 0, 1, 917500, 0, 65536, 917501, 0, 65537, 917502, 0, 65536, 917503, 0, 65537, 851968, 0, 65536, 851969, 0, 65537, 851970, 0, 65536, 851971, 0, 65537, 851972, 0, 65536, 851973, 0, 65537, 851974, 0, 65536, 851975, 0, 65537, 851976, 0, 65536, 851977, 0, 65537, 851978, 0, 65536, 851979, 0, 65537, 851980, 0, 65536, 851981, 0, 65537, 851982, 0, 65536, 851983, 0, 65537, 851984, 0, 65536, 851985, 0, 65537, 851986, 0, 65536, 851987, 0, 65537, 851988, 0, 65536, 851989, 0, 65537, 851990, 0, 65536, 851991, 0, 65537, 983036, 0, 0, 983037, 0, 1, 983038, 0, 0, 983039, 0, 1, 917504, 0, 0, 917505, 0, 1, 917506, 0, 0, 917507, 0, 1, 917508, 0, 0, 917509, 0, 1, 917510, 0, 0, 917511, 0, 1, 917512, 0, 0, 917513, 0, 1, 917514, 0, 0, 917515, 0, 1, 917516, 0, 0, 917517, 0, 1, 917518, 0, 0, 917519, 0, 1, 917520, 0, 0, 917521, 0, 1, 917522, 0, 0, 917523, 0, 1, 917524, 0, 0, 917525, 0, 1, 917526, 0, 0, 917527, 0, 1, 1048572, 0, 65536, 1048573, 0, 65537, 1048574, 0, 65536, 1048575, 0, 65537, 983040, 0, 65536, 983041, 0, 65537, 983042, 0, 65536, 983043, 0, 65537, 983044, 0, 65536, 983045, 0, 65537, 983046, 0, 65536, 983047, 0, 65537, 983048, 0, 65536, 983049, 0, 65537, 983050, 0, 65536, 983051, 0, 65537, 983052, 0, 65536, 983053, 0, 65537, 983054, 0, 65536, 983055, 0, 65537, 983056, 0, 65536, 983057, 0, 65537, 983058, 0, 65536, 983059, 0, 65537, 983060, 0, 65536, 983061, 0, 65537, 983062, 0, 65536, 983063, 0, 65537 )

[node name="PlayerPosition" type="Position2D" parent="."]
position = Vector2( 247, 85 )

[node name="TaxKnightPosition" type="Position2D" parent="."]
position = Vector2( 284, 129 )

[node name="YSort" type="YSort" parent="."]

[node name="Player" parent="YSort" instance=ExtResource( 16 )]
position = Vector2( 139, 79 )

[node name="Rock" parent="YSort" instance=ExtResource( 13 )]
position = Vector2( 104, 57 )

[node name="CraftingTable" parent="YSort" instance=ExtResource( 10 )]
position = Vector2( 32, 113 )

[node name="MiningRig" parent="YSort" instance=ExtResource( 6 )]
position = Vector2( 160, 32 )

[node name="Forge" parent="YSort" instance=ExtResource( 5 )]
material = SubResource( 1 )
position = Vector2( 208, 32 )

[node name="Ladder" parent="YSort" instance=ExtResource( 14 )]
position = Vector2( 247, 78 )

[node name="BlackMarket" parent="YSort" instance=ExtResource( 12 )]
position = Vector2( 26, 39 )

[node name="Shop" parent="YSort" instance=ExtResource( 11 )]
position = Vector2( 80, 32 )

[node name="Chest" parent="YSort" instance=ExtResource( 15 )]
position = Vector2( 88, 128 )

[node name="TileSelector" type="Sprite" parent="YSort"]
z_index = 1
texture = ExtResource( 9 )
